--- a/src/components/InvitationForm.module.css
+++ b/src/components/InvitationForm.module.css
@@ -17,3 +17,9 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 1rem;
 }
+
+.container-button {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0;
+}
