Change main colors, submit data logic work

--- a/src/components/InvitationForm.module.css
+++ b/src/components/InvitationForm.module.css
@@ -2,7 +2,7 @@
     width: 80%;
     padding: 2rem;
     margin: auto;
-    background-color: #d8bcaf;
+    background-color: #e6e6fa;
     border-radius: 1rem;
 }
 
