--- a/src/components/CompanyCard.module.css
+++ b/src/components/CompanyCard.module.css
@@ -1,6 +1,6 @@
 .card {
     padding: 1rem;
-    background-color: rgba(185, 69, 69, 0.1);
+    background-color: #e1def4;
     border-radius: 1rem;
     margin: 1rem;
 }
