Add icons, create confirmation modal, work in form logic

--- a/src/components/InvitationForm.module.css
+++ b/src/components/InvitationForm.module.css
@@ -23,3 +23,9 @@
     justify-content: center;
     margin: 2rem 0;
 }
+
+.check-error {
+    color: #e1545b;
+    margin-left: 0.75rem;
+    margin-top: -0.75rem;
+}
