--- a/src/components/UI/ButtonGeneral.module.css
+++ b/src/components/UI/ButtonGeneral.module.css
@@ -2,7 +2,7 @@
     font: inherit;
     border: 1px solid #d4c4ec;
     background: #d4c4ec;
-    color: black;
+    color: white;
     padding: 0.75rem 3.5rem;
     cursor: pointer;
     border-radius: 30px;
@@ -12,6 +12,7 @@
 .button:active {
     background: #dccce4;
     border-color: #dccce4;
+    color: #5d624e;
 }
   
 .button:focus {
