--- a/src/components/pages/event-confirmation/CompanyCard.module.css
+++ b/src/components/pages/event-confirmation/CompanyCard.module.css
@@ -1,6 +1,6 @@
 .card {
     padding: 1rem;
-    background-color: #e1def4;
+    background-color: rgba(255, 255, 255, 0.2);
     border-radius: 1rem;
     margin: 1rem;
 }
