--- a/src/components/pages/event-confirmation/InvitationForm.module.css
+++ b/src/components/pages/event-confirmation/InvitationForm.module.css
@@ -2,7 +2,7 @@
     width: 80%;
     padding: 2rem;
     margin: auto;
-    background-color: #e6e6fa;
+    background-color: var(--secondary-color);
     border-radius: 1rem;
 }
 
